[gd_scene load_steps=10 format=3 uid="uid://dd340jgbxcjka"]

[ext_resource type="Texture2D" uid="uid://ciqsgj81kugia" path="res://assets/visual/ui/bg_graveyard.png" id="1_62moo"]
[ext_resource type="Script" path="res://scripts/end_game.gd" id="1_tsd0c"]
[ext_resource type="FontFile" uid="uid://bspmm0n21y6lk" path="res://assets/visual/ui/fonts/Adventurer.ttf" id="2_dpvno"]
[ext_resource type="Texture2D" uid="uid://xejdyds6hm8d" path="res://assets/visual/ui/bg_forest.png" id="3_n16nw"]
[ext_resource type="Texture2D" uid="uid://wsm402eoi57v" path="res://assets/visual/ui/bg_city.png" id="4_5kxn7"]
[ext_resource type="Texture2D" uid="uid://c804p0l5twdor" path="res://assets/visual/ui/menu_background.png" id="6_fd24y"]
[ext_resource type="Texture2D" uid="uid://celdn8y8e4ixl" path="res://assets/visual/ui/speedup.png" id="7_gfra2"]
[ext_resource type="AudioStream" uid="uid://bghrxlubut6f7" path="res://assets/music/spirit_of_valley.ogg" id="8_eyljc"]
[ext_resource type="PackedScene" uid="uid://bibmug15nxjgl" path="res://scenes/credits.tscn" id="9_k8a7f"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tsd0c")

[node name="Opacifier" type="ColorRect" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Ch1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_62moo")

[node name="LabelCh1" type="Label" parent="Ch1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -201.0
offset_top = 30.0
offset_right = 229.0
offset_bottom = 187.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_dpvno")
theme_override_font_sizes/font_size = 25
text = "The three protectors are free !
You look at them as they close the portal, and rid the place of the scattered enemies.
The black dragon goes back to its lair in the mountains"
autowrap_mode = 3

[node name="Ch2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_n16nw")

[node name="LabelCh2" type="Label" parent="Ch2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 500.0
offset_right = 230.0
offset_bottom = 627.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_dpvno")
theme_override_font_sizes/font_size = 25
text = "The red dragon goes back to the woods, bringing back the life, the harmony and the balance to the place"
autowrap_mode = 3

[node name="Ch3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_5kxn7")

[node name="LabelCh3_1" type="Label" parent="Ch3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.0
offset_top = 22.0
offset_right = 227.0
offset_bottom = 170.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 7
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("2_dpvno")
theme_override_font_sizes/font_size = 25
text = "You travel back to your plains, your grass and your beloved city. As you make your way home, the Green dragon flies over you. Letting a powerful scream echo in the air."
autowrap_mode = 3

[node name="LabelCh3_2" type="Label" parent="Ch3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 30.0
offset_top = 189.0
offset_right = 247.0
offset_bottom = 592.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 7
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("2_dpvno")
theme_override_font_sizes/font_size = 25
text = "You spend a few minutes watching it vanish in the distance. 

You know the nightmare is over. At least for a moment.

You feel like sleeping for a year."
autowrap_mode = 3

[node name="MainBackground" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_fd24y")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
z_index = 4096
layout_mode = 0
offset_left = 3.0
offset_top = 549.0
offset_right = 43.0
offset_bottom = 589.0
texture = ExtResource("7_gfra2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_eyljc")
autoplay = true

[node name="Credits" parent="." instance=ExtResource("9_k8a7f")]
visible = false
layout_mode = 0
anchors_preset = 0
game_finished = true

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="tree_exiting" from="Credits" to="." method="_on_tree_exiting"]
[connection signal="visibility_changed" from="Credits" to="Credits" method="_on_visibility_changed"]
